--- a/src/App.css
+++ b/src/App.css
@@ -78,6 +78,11 @@ img {
   height: 180px;
 }
 
+.loading{
+  /* width: 500px; */
+  margin-top: 50px;
+  height: 100px;
+}
 /* COUNT PAGE */
 .count-btn {
   font-size: 1.75rem !important;
